<resources>
    <string name="app_name">AndroidProject</string>
    <string name="home_create_ad_btn">Add an ad</string>
    <string name="home_random_ad_btn">Pick a random ad</string>
    <string name="home_ads_list_btn">View all ads</string>
    <string name="home_search_btn">Search an item</string>
    <string name="add_title_label">Title</string>
    <string name="add_price_label">Price</string>
    <string name="add_description_label">Description</string>
    <string name="add_email_label">Email</string>
    <string name="add_pseudo_label">Pseudo</string>
    <string name="add_phone_label">Phone number</string>
    <string name="add_city_label">City</string>
    <string name="add_postcode_label">Postcode</string>
    <string name="add_title">Add an ad</string>
    <string name="add_submit_button">Add</string>
    <string name="currency">$</string>
    <string name="tel">Tel</string>
    <string name="email">Email</string>
    <string name="my_preferences">My Preferences</string>
    <string name="username">Username</string>
    <string name="add_your_preferences">Add your preferences</string>
    <string name="preference_file_key" />
    <string name="usernamePref" />
    <string name="my_pref_file_key">com.dez.my_pref_file_key</string>
    <string name="homeSearchPlaceholder">Search...</string>
    <string name="addPrefSubmitBtn">Ok</string>
    <string name="viewContact">Contact :</string>
</resources>
