<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dnr2i.master.unicaen.fr.androidproject.PreferencesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:padding="10dp"
            android:text="@string/add_your_preferences"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
        <LinearLayout
            android:layout_width="556dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/addUsernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/addEmailPrefLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/addEmailPrefField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress" />
            <TextView
                android:id="@+id/addTelPrefLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel" />

            <EditText
                android:id="@+id/addTelPrefField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitPreferences"
                android:text="Ok" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>