<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context="dnr2i.master.unicaen.fr.androidproject.HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/cardview_light_background"
                android:ems="10"
                android:hint="Search..."
                android:inputType="textPersonName"
                android:padding="10dp" />

            <ImageButton
                android:id="@+id/searchButton"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/textColorHint"
                android:onClick="search"
                android:padding="0dp"
                android:src="@drawable/search_icon" />

        </LinearLayout>

        <Button
            android:id="@+id/createAdBtn"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/textColorHint"
            android:onClick="add"
            android:padding="10dp"
            android:text="@string/home_create_ad_btn" />

        <Button
            android:id="@+id/adsListBtn"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/textColorHint"
            android:elevation="0dp"
            android:onClick="listAds"
            android:padding="10dp"
            android:text="@string/home_ads_list_btn" />

        <Button
            android:id="@+id/randomAdBtn"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/textColorHint"
            android:onClick="random"
            android:padding="10dp"
            android:text="@string/home_random_ad_btn" />

    </LinearLayout>

</RelativeLayout>
